[metadata]
name = lamb
version = file: VERSION
description = Lamb framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ESCape-Tech-LLC/lamb-core
author = Vladimir Konev
author_email = vk@escape-team.tech
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 4
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
license = MIT


[options]
python_requires = >=3.6
include_packages_data = True
packages = find:
zip_safe = True

install_requires =
    django
    boto3
    celery
    dpath
    sqlalchemy<2.1
    sqlalchemy-utils
    Pillow
    requests
    python-magic
    python-dateutil
    phonenumbers
    ipaddress
    geopy
    furl
    pushjack
    lxml
    babel
    openpyxl
    django-ipware
    asgiref
    python-redis-lock
    colour
    geoip2
    jmespath
    lazy_object_proxy
    jinja2

[options.extras_require]
postgresql =
    # TODO: update after celery fixed
    psycopg2-binary==2.9.5
cassandra =
    cassandra-driver
scylla =
    scylla-driver
boost =
    cython
    uvloop
pillow-simd =
    Pillow-SIMD
asyncio =
    asgiref
    aiofile
    aiohttp
    aioredis
    sqlalchemy[asyncio]
asyncpg =
    %(asyncio)s
    asyncpg
aiosqlite =
    %(asyncio)s
    aiosqlite
dev =
    pre-commit
    black
    bump2version
uwsgi =
    uwsgi
asgi =
    uvicorn[standard]
    gunicorn



; migrate to pyproject.toml when would support
[flake8]
show-source = true
max-line-length = 120
extend-ignore = E203
per-file-ignores =
    lamb/service/throttling/__init__.py: W293
    lamb/db/__init__.py: F401
    lamb/service/image/__init__.py: F401
    lamb/execution_time/__init__.py: F401
    lamb/service/inapp_purchases/__init__.py: F401
    lamb/json/__init__.py: F401
# TODO: fix and recheck
    lamb/db/patterns.py: RST301, RST201
    lamb/middleware/grequest.py: E402

