[metadata]
name = lamb
version = file: VERSION
description = Lamb framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ESCape-Tech-LLC/lamb-core
author = Vladimir Konev
author_email = vk@escape-team.tech
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 4
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
license = MIT


[options]
python_requires = >=3.11
include_packages_data = True
packages = find:
zip_safe = True

install_requires =
    django
    boto3
    celery
    dpath
    sqlalchemy<2.1
    sqlalchemy-utils
    Pillow
    requests
    python-magic
    python-dateutil
    phonenumbers
    furl
    lazy_object_proxy
    jinja2
    redis
    django-ipware
    ; candidates to isolate/remove
    lxml
    geoip2

[options.extras_require]
postgresql =
    psycopg2-binary
cassandra =
    cassandra-driver
scylla =
    scylla-driver
boost =
    cython
    uvloop
    redis[hiredis]
pillow-simd =
    Pillow-SIMD
asyncio =
    aiofile
    aiohttp
    aioredis
    sqlalchemy[asyncio]
asyncpg =
    %(asyncio)s
    asyncpg
aiosqlite =
    %(asyncio)s
    aiosqlite
uwsgi =
    uwsgi
asgi =
    uvicorn[standard]
    uvicorn-worker
    gunicorn


dev =
    pre-commit
    black
    bump-my-version

# contrib/REMOVED
# python-redis-lock - old
# jmespath - not used directly
# colour - not used directly
# geopy - not used directly
# babel - rare: used only with locale type
# openpyxl - rare: used only with ext/openpyxl

; migrate to pyproject.toml when would support
[flake8]
show-source = true
max-line-length = 120
extend-ignore = E203
per-file-ignores =
;    lamb/service/throttling/__init__.py: W293
    lamb/db/__init__.py: F401
    lamb/service/image/__init__.py: F401
    lamb/execution_time/__init__.py: F401
    lamb/service/inapp_purchases/__init__.py: F401
    lamb/json/__init__.py: F401,A005
    lamb/types/__init__.py: A005
    lamb/db/inspect.py: A005
    lamb/db/logging.py: A005
    lamb/types/json.py: A005
    lamb/types/locale.py: A005
# TODO: fix and recheck
    lamb/db/patterns.py: RST301, RST201
    lamb/middleware/grequest.py: E402

